# pretty-expressive-oopsla23-artifact

./: .dockerignore  .gitignore  CHANGELOG  Dockerfile  LICENSE  README.md  artifact-overview.md  bernardy-remove-width-limit.patch  dev-setup.sh  perf  run.rkt
.github/workflows/: docker-base-push.yml  docker-base-test.yml  docker-image.yml  docker-main-push-core.yml  docker-main-push.yml
artifacts/: generate-random-trees.rkt  pretty-artifact.cabal
artifacts/app/: BernardyCustomizableWidth.hs  BernardyPaper.hs  LibJSON.hs  LibSExp.hs  LibTest.hs  Main.hs  TestConcat.hs  TestFillSep.hs  TestFullSExp.hs  TestJSON.hs  TestRandomSExp.hs  TestSExpFull.hs  TestSExpRandom.hs
benchdata/: random-tree-1.sexp  random-tree-2.sexp  random-tree-3.sexp
data/: README.md  generate-random-trees.rkt  random-tree-4.sexp
lean/: .gitignore  Bad.lean  Makefile  Pretty.lean  README.md  TestProofWithSorry.lean  TestUnfinishedProof.lean  lake-manifest.json  lakefile.lean
lean/Pretty/: Basic.lean  Claims.lean  DedupLemma.lean  Def.lean  Defs.lean  DocSizeLemma.lean  DominationLemma.lean  FactoryDef.lean  FactoryExample.lean  FactoryMathLemma.lean  LwAndCostLemma.lean  MeasRenderThm.lean  MeasureSetOpDef.lean  MergeBasicLemma.lean  MergeLemma.lean  ParetoThm.lean  RenderThm.lean  ResolveBoundLemma.lean  ResolveDef.lean  ResolveDetThm.lean  ResolveLastLemma.lean  ResolveLemma.lean  ResolveOptimalityLemma.lean  ResolveOptimalityThm.lean  ResolveParetoLemma.lean  ResolveTotalThm.lean  ResolveValidity.lean  ResolveValidityTainted.lean  Supports.lean  Tactic.lean  WidenThm.lean
lean/Pretty/Claims/: MeasRender.lean  OurFactory.lean  Pareto.lean  Render.lean  ResolveBound.lean  ResolveDet.lean  ResolveEfficient.lean  ResolveExceeding.lean  ResolveOptimal.lean  ResolveTotal.lean  ResolveValid.lean  Widen.lean
lean/Pretty/Defs/: Basic.lean  Factory.lean  Layout.lean  MeasureSetOp.lean  Resolve.lean
lean/Pretty/Supports/: Basic.lean  Dedup.lean  DocSize.lean  Domination.lean  FactoryMath.lean  LastAndCost.lean  Layout.lean  LayoutCost.lean  LwAndCost.lean  MeasRender.lean  Merge.lean  MergeBasic.lean  Pareto.lean  ResolveLast.lean  ResolveOptimal.lean  ResolveOptimality.lean  ResolvePareto.lean
lean/scripts/: gen-main.rkt  process-graph.rkt
other-artifacts/: README.md  pretty-artifact.cabal
other-artifacts/Constants/: Values.hs
other-artifacts/Lib/: Bench.hs  BenchTool.hs  JSON.hs  JSONTool.hs  SExp.hs  SExpTool.hs
other-artifacts/PrinterPaper/: BernardyCustomizableWidth.hs  BernardyPaper.hs
other-artifacts/app/: BernardyPaper.hs  LibTest.hs  TestRepeatedFlatten.hs  TestSExpRandom.hs
other-artifacts/benchmarks/: Concat.hs  FillSep.hs  Flatten.hs  JSON.hs  SExpFull.hs  SExpRandom.hs
output-dir/: README.md  classinternal@5750  classinternal@5751  jsonw@709  jsonw@721  randfit10k@10459  randfit10k@7861  randfit1k@629  randfit1k@943  randover10k@15027  randover10k@16015  randover10k@7953  randover1k@1105  randover1k@1531  randover1k@1635
prettiester/: dune  printer.ml  test.ml  test_concat.ml  test_fill_sep.ml  test_json.ml  test_lib.ml  test_sexpr_full.ml  test_sexpr_random.ml  test_wadler_opt.ml  test_wadler_time.ml  test_yelland_dag.ml  test_yelland_sup_linear.ml
pretty-expressive-ocaml/: Makefile  README.md  dune  dune-project  dune-workspace  run.sh
pretty-expressive-ocaml/benchmarks/: concat.ml  dune  fill_sep.ml  flatten.ml  json.ml  sexp_full.ml  sexp_random.ml  wadler_opt.ml  yelland_dag.ml  yelland_sup_linear.ml
pretty-expressive-ocaml/benchtool/: benchtool.ml  dune
pretty-expressive-ocaml/examples/: dune  fig_1.ml
pretty-expressive-ocaml/pretty/: dune  info.mli  printer.ml  printer.mli  signature.mli
pretty-expressive-ocaml/printer/: dune  printer.ml  printer.mli  signature.mli
resources/: Dockerfile@base
rosette/: README.md  cost-factory.rkt  setup-z3.rkt
scripts/: README.md  common.rkt  gen-table-2-cell.rkt  gen-table-2-mismatches.rkt  gen-table-2.rkt  gen-table-3-cell.rkt  gen-table-3.rkt  view-tables.rkt
snow-white/: test_fill_sep.ml  test_sexp_full.ml
snowwhite/: test.ml  test_lib.ml  test_sexp_random.ml  test_wadler_opt.ml
