cabal-version:      3.0
name:               pretty-artifact
version:            0.1.0.0
license:            MIT
build-type:         Simple

Library
  exposed-modules:
    Text.PrettyPrint.Compact
    Text.PrettyPrint.Compact.Core
    TextPatched.PrettyPrint.Compact
    TextPatched.PrettyPrint.Compact.Core
    Constants.Values
  build-depends:
    base >= 3 && < 5,
    base-compat >= 0.9.3 && <0.13,
    containers

common warnings
    ghc-options: -Wall

common deps
    build-depends:    base,
                      optparse-applicative,
                      criterion,
                      criterion-measurement,
                      aeson,
                      bytestring,
                      attoparsec,
                      wl-pprint,
                      text,
                      pretty-artifact
    other-modules:    BernardyPaper, BernardyCustomizableWidth,
                      LibTest
    import:           warnings
    hs-source-dirs:   app
    default-language: Haskell2010

executable test-fill-sep
    import: deps
    main-is:          TestFillSep.hs

executable test-full-sexp
    import: deps
    main-is:          TestFullSExp.hs

executable test-random-sexp
    import: deps
    main-is:          TestRandomSExp.hs

executable test-json
    import: deps
    main-is:          TestJSON.hs
