cabal-version:      3.4
name:               pretty-artifact
version:            0.1.0.0
license:            MIT
build-type:         Simple

Library
  exposed-modules:
    Text.PrettyPrint.Compact
    Text.PrettyPrint.Compact.Core
    TextPatched.PrettyPrint.Compact
    TextPatched.PrettyPrint.Compact.Core
    Constants.Values
  build-depends:
    base >= 3 && < 5,
    base-compat >= 0.9.3 && <0.13,
    containers

common warnings
    ghc-options: -Wall

common deps
    import:           warnings
    build-depends:    base,
                      optparse-applicative,
                      criterion,
                      criterion-measurement,
                      aeson,
                      bytestring,
                      attoparsec,
                      wl-pprint,
                      text,
                      pretty-artifact
    other-modules:    BernardyPaper, BernardyCustomizableWidth,
                      LibTest, LibJSON, LibSExp
    hs-source-dirs:   app

executable test-fill-sep
    import: deps
    main-is:          TestFillSep.hs

executable test-sexp-full
    import: deps
    main-is:          TestSExpFull.hs

executable test-sexp-random
    import: deps
    main-is:          TestSExpRandom.hs

executable test-json
    import: deps
    main-is:          TestJSON.hs

executable test-flatten
    import: deps
    main-is:          TestFlatten.hs

executable test-concat
    import: deps
    main-is:          TestConcat.hs
