(executables
 (names test_yelland_sup_linear
        test_yelland_dag
        test_flatten
        test_wadler_opt
        test_concat
        test_json
        test_sexp_full
        test_sexp_random
        test_fill_sep
        test)
 (libraries yojson core core_bench
            core_unix.command_unix
            core_unix.sys_unix
            stdio)
 (preprocess (pps ppx_jane)))

(env
 (dev
  (flags (:standard -w -27))))
